# Open-V2

./: README.md  build.bat  open_v2_shared_debug.props
container_generator/: CMakeLists.txt  container_generator.cpp  container_generator.vcxproj
file_explorer/: file_explorer.cpp
gui_window_generator/: CMakeLists.txt  gui_window_generator.cpp  gui_window_generator.vcxproj
military/: army.h  army_order.h  fleet.h  military_leader.h  strategic_hq.h  war.h
nations/: state.h
parser_generator/: CMakeLists.txt  parser_generator.cpp  parser_generator.vcxproj
population/: pop.h
provinces/: province.h  province_state.h
simple_serialize/: simple_serialize.vcxproj
world_state/: bottombar.cpp
